five year update

--- a/index.html
+++ b/index.html
@@ -158,17 +158,6 @@
 
             <hr />
 
-            <h3>Classes</h3>
-            <div class="row">
-                <div class="col-md-6" ng-repeat="class in classes">
-                    <ul>
-                        {{class.title}}
-                    </ul>
-                </div>
-            </div>
-
-            <hr />
-
             <h3>Technical Skills</h3>
             <div class="row">
                 <div class="col-md-6" ng-repeat="skill in technical_skills">
@@ -220,7 +209,7 @@
                         <li class="col-md-4">
                             <a href=mailto:{{contact_details.email}}>
                                 <img src="/assets/images/email.png" height="65">
-                                <span>Email - amk5401@rit.edu</span>
+                                <span>Email - austin.klein.se@gmail.com</span>
                             </a>
                         </li>
                         <li class="col-md-4">
