update to https

--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
     <div id="top" class="jumbotron" data-position="center center">
         <div class="container">
             <h1>404 - Page not found</h1>
-            <p class="left-text"><a href="http://austin-klein.com">Click here to return to the main page.</a></p>
+            <p class="left-text"><a href="https://austin-klein.com">Click here to return to the main page.</a></p>
         </div>
         <div class="overlay"></div>
     </div>
