--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Austin Klein - Online Resume</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
     <link href="/css/bootstrap.css" rel="stylesheet" />
     <link href="/css/style.css" rel="stylesheet" />
 
